fix spacing on projects

--- a/src/Components/Style/Projects.css
+++ b/src/Components/Style/Projects.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: center;
   padding: 0 0 15%;
-  width: 100%;
+  max-width: 100%;
+  height: auto;
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(30,144,255,1) 100%);
 }
 
@@ -19,12 +20,14 @@
 
 .prjBox{
   box-sizing: border-box;
-  width: 70%;
+  width: 95%;
   margin: 4% 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   grid-column-gap: 3%;
   grid-row-gap: 3%;
+  
+  
 }
 
 .prjBox .card{
@@ -36,6 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 }
 
 .imgBox img{
@@ -270,7 +274,6 @@
 @media only screen and (min-width: 700px){
   .prjBox{
     
-    width: 90%;
     margin: 4% 0 6%;
   }
 }
